syntax = "proto3";

package improbable.grpcweb.test;

import "google/protobuf/empty.proto";

message PingRequest {
  enum FailureType {
    NONE = 0;
    CODE = 1;
    DROP = 2;
  }
  
  string value = 1;
  int32 response_count = 2;
  uint32 error_code_returned = 3;
  FailureType failure_type = 4;
  bool check_metadata = 5;
  bool send_headers = 6;
  bool send_trailers = 7;
}

message PingResponse {
  string Value = 1;
  int32 counter = 2;
}

service TestService {
  rpc PingEmpty(google.protobuf.Empty) returns (PingResponse) {}

  rpc Ping(PingRequest) returns (PingResponse) {}

  rpc PingError(PingRequest) returns (google.protobuf.Empty) {}

  rpc PingList(PingRequest) returns (stream PingResponse) {}
}

service FailService {
  rpc NonExistant(PingRequest) returns (PingResponse) {}
}